--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
+# Core Flask packages
 Flask==3.1.0
 Werkzeug==3.1.3
-SQLAlchemy==2.0.36
-Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
-python-dotenv==1.0.1
-pycryptodome==3.21.0
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+Flask-Talisman  # For security headers
+Flask-SeaSurf   # For CSRF protection
+Flask-Limiter   # For rate limiting
+Flask-Caching
+
+# Database and ORM
+SQLAlchemy==2.0.36
+python-dotenv==1.0.1
 email-validator==2.1.1
+
+# Crypto
+pycryptodome==3.21.0
 cryptography==42.0.5
+
+# PostgreSQL client (handled via conda, not pip)
+psycopg2-binary
+
+# Deployment / Monitoring
+gunicorn
+sentry-sdk[flask]
+
+# Redis support (install redis itself via conda)
+redis
