--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ click==8.1.8
 cryptography==42.0.5
 Deprecated==1.2.18
 dnspython==2.7.0
+dominate==2.9.1
 email_validator==2.1.1
 Flask==3.1.0
+Flask-Bootstrap==3.3.7.1
 Flask-Caching==2.3.1
 Flask-Limiter==3.11.0
 Flask-Login==0.6.3
@@ -42,6 +44,7 @@ sentry-sdk==2.25.1
 SQLAlchemy==2.0.36
 typing_extensions==4.13.1
 urllib3==2.3.0
+visitor==0.1.3
 Werkzeug==3.1.3
 wrapt==1.17.2
 WTForms==3.2.1
