--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 limits==4.2
 Mako==1.3.9
+Flask-Mail==0.9.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
